--- a/tools.css
+++ b/tools.css
@@ -95,6 +95,8 @@
   width: 100%;
   height: 100%;
   background: rgba(60, 59, 55, .5);
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .__modal div {
