--- a/ebook.css
+++ b/ebook.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@xmport url(http://fonts.googleapis.com/css?family=Crimson+Text:regular,regularitalic,bold);
+@import url(http://fonts.googleapis.com/css?family=Crimson+Text:regular,regularitalic,bold);
 
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote,
