--- a/tools.css
+++ b/tools.css
@@ -142,7 +142,29 @@
   overflow: auto;
 }
 
-.__modal_close {
+.__modal a {
+  color: #A00;
+  text-decoration: none;
+}
+
+.__modal a:visited {
+  color: #900;
+}
+
+.__modal a:hover,
+.__modal a:focus {
+  outline: none;
+  color: #F00;
+  border-bottom: .0625em solid;
+}
+
+.__modal a:active {
+  color: white;
+  background: #F00;
+  border: none;
+}
+
+.__modal a.__modal_close {
   z-index: 802;
   background: white;
   color: rgb(60,59,55);
@@ -163,10 +185,16 @@
   border-radius: 30px;
 }
 
-.__modal_close:hover,
-.__modal_close:focus {
+.__modal a.__modal_close:hover,
+.__modal a.__modal_close:focus {
   color: white;
   border-color: white;
+  background: rgb(60,59,55);
+}
+
+.__modal a.__modal_close:active {
+  color: #A00;
+  border-color: #A00;
   background: rgb(60,59,55);
 }
 
@@ -182,7 +210,7 @@
     position: static;
     max-height: 80%;
   }
-  .__modal_close {
+  .__modal a.__modal_close {
     position: static;
     float: right;
     margin-bottom: -15px;
@@ -238,6 +266,8 @@
 #__navigation {
   margin: 1.25em auto 1.25em;
   text-align: center;
+  position: absolute;
+  width: 100%;
 }
 
 #__navigation li {
