update the way the ToC numbers are incremented

--- a/ebook.css
+++ b/ebook.css
@@ -510,8 +510,12 @@ code, kbd {
   counter-increment: none;
 }
 
-.book #Table_of_Contents {
+.book #Table_of_Contents ol {
   counter-reset: toc;
+}
+
+.book #Table_of_Contents ol.continued {
+  counter-reset: none;
 }
 
 .book #Table_of_Contents li {
