add CSS hyphenation

--- a/static/ebook.css
+++ b/static/ebook.css
@@ -157,6 +157,13 @@ h6 {
   margin: 0 0 .625em;
 }
 
+p {
+  -webkit-hyphens: auto;
+  -epub-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
+}
+
 abbr[title], dfn[title] {
   cursor: help;
 }
