split styles in individual Sass files

--- a/src/sass/ebook.scss
+++ b/src/sass/ebook.scss
@@ -1,4 +1,12 @@
 @charset "UTF-8";
 
 @import "crimson";
-@import "old";
+@import "paged";
+@import "reset";
+@import "book";
+@import "blockquotes";
+@import "counters";
+@import "footnotes";
+@import "toc";
+@import "dialogs";
+@import "annotations";
