move font declarations in own Sass file

--- a/src/sass/ebook.scss
+++ b/src/sass/ebook.scss
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 
-@import "crimson";
+@import "compass";
+
+@import "fonts";
 @import "paged";
 @import "reset";
 @import "book";
