--- a/src/sass/_dialogs.scss
+++ b/src/sass/_dialogs.scss
@@ -1,14 +1,14 @@
 /**
  * Dialogs -----------------------------------------------------------
  */
-dl.dialog dt {
+.dialog dt {
   float: left;
   font-variant: small-caps;
   letter-spacing: .05em;
   margin-right: .75em;
 }
 
-dl.dialog dd {
+.dialog dd {
   margin-bottom: .75em;
   padding-left: 1.25em;
 }
