--- a/src/sass/_blockquotes.scss
+++ b/src/sass/_blockquotes.scss
@@ -2,7 +2,7 @@
  * Blockquote styles -------------------------------------------------
  */
 
-.book blockquote {
+blockquote {
   padding: 0 1.42857em;
   font-size: .875em;
   line-height: 1.42857;
@@ -10,41 +10,41 @@
   display: table;
 }
 
-.book blockquote.centered {
+blockquote.centered {
   display: block;
 }
 
-.book .centered,
-.book blockquote.centered p {
+.centered,
+blockquote.centered p {
   text-align: center;
 }
 
-.book blockquote.article p.article_header {
+blockquote.article p.article_header {
   text-align:center;
   margin: 1.25em 0;
   font-variant: small-caps;
   -moz-font-feature-settings: 'smcp=1';
   letter-spacing: .033em;
 }
-.book blockquote.slanted,
-.book blockquote.quote {
+blockquote.slanted,
+blockquote.quote {
   font-style: italic;
 }
-.book blockquote.fixed pre {
+blockquote.fixed pre {
   white-space: pre;
   display: table;
   width: auto;
   margin: 0 auto;
 }
-.book blockquote.fixed pre * {
+blockquote.fixed pre * {
   white-space: pre;
 }
-.book blockquote .source {
+blockquote .source {
   font-style: italic;
   font-size: .875em;
   text-align: right;
 }
-.book blockquote.poem {
+blockquote.poem {
   padding: 0;
   display: table;
   width: auto;
@@ -52,7 +52,7 @@
   margin-right: auto;
 }
 
-.book .poem .line {
+.poem .line {
   display:block;
   white-space:nowrap;
 }
