--- a/src/sass/_book.scss
+++ b/src/sass/_book.scss
@@ -37,167 +37,111 @@
   margin: 1.25em 0 0;
 }
 
-.book header,
-.book section {
+header,
+section {
   margin: 0 0 2.5em;
   padding: 0 0 2.4375em;
   border-bottom: .0625em solid #ccc;
 }
 
 @media print {
-  .book header,
-  .book section {
+  header,
+  section {
     page-break-after: always;
     page-break-after: right;
     border-bottom: none;
     padding-bottom: 0;
   }
-  .book section:last-child,
-  .book section section {
+  section:last-child,
+  section section {
     page-break-after: auto;
   }
-  .book section section {
+  section section {
     padding-bottom: 2.5em;
   }
-  .book section section > *:first-child {
+  section section > *:first-child {
     page-break-before: avoid;
   }
 }
 
-.book section section:last-child {
+section section:last-child {
   margin-bottom: 0;
   padding-bottom: 0;
   border-bottom: 0;
 }
 
-.book header h2,
-.book header p {
+@media (min-width: 52em) {
+  header h1 {
+    max-width: 61.8%;
+  }
+}
+
+header h2,
+header h3,
+header h4,
+header h5,
+header p {
   text-align: center;
 }
 
-.book header h2 {
+header h2 {
   margin-bottom: 1.25em;
 }
 
-.book header h2.author:before {
+header h2.author:before {
   content: "by ";
   display: block;
   font-size: .666em;
   font-style: italic;
+  margin: 0 0 .625em;
 }
 
-.book header h2.author:lang(de):before {
+header h2.author:lang(de):before {
   content: "von ";
 }
 
-.book header p {
+header p {
   width: 61.8%;
   margin: 0 auto;
 }
 
-.book p {
-  text-align: justify;
-  @include hyphenation;
-}
-
-.book p + p {
-  text-indent: 1.25em;
-}
-
-.book .letter_header + p + p,
-.book .article_header,
-.book .article_header + p,
-.book p.signature,
-.book p.postscriptum,
-.book .poem p,
-.book p.noindent {
+.letter_header + p + p,
+.article_header,
+.article_header + p,
+p.signature,
+p.postscriptum,
+.poem p,
+p.date + p,
+p.noindent {
   text-indent: 0;
 }
 
-.book section h2+p:first-line,
-.book section h3+p:first-line,
-.book section > p:first-child:first-line {
+section h2+p:first-line,
+section h3+p:first-line,
+section > p:first-child:first-line {
   font-variant: small-caps;
-  -moz-font-feature-settings: 'smcp=1';
   letter-spacing: .033em;
 }
 
-.book figure {
-  text-align: center;
-  margin: 1.25em auto;
-  max-width: 100%;
-}
-
-.book figure img {
-  max-width: 100%;
-  display: block;
-  margin: 0 auto;
-}
-
-.book figcaption {
-  font-size: .875em;
-  line-height: 1.42857;
-}
-
-.book p.separation {
+p.separation {
   margin-top: 1.25em;
   text-indent: 0;
 }
 
-.book p.date,
-.book p.signature {
+p.date,
+p.signature {
   text-align: right;
   font-style: italic;
 }
 
-.book p.date + p {
-  text-indent: 0;
-}
-
-.book hr {
-  color: #aaa;
-  height: .0625em;
-  background: #aaa;
-  border: none;
-  margin: 1.25em 0 1.1875em;
-}
-
-.book var,
-.book em {
-  font-style: italic;
-}
-
-.book .proper_name,
-.book strong {
+.proper_name {
   font-weight: normal;
   font-variant: small-caps;
-  -moz-font-feature-settings: 'smcp=1';
   letter-spacing: .05em;
   padding: 0 0 0 .1em;
 }
 
-.book a {
-  color: #A00;
-  text-decoration: none;
-}
-
-.book a:visited {
-  color: #900;
-}
-
-.book a.stealth {
+a.stealth {
   color: #222;
 }
 
-.book a:hover,
-.book a:focus {
-  outline: none;
-  color: #F00;
-  border-bottom: .0625em solid;
-}
-
-.book a:active {
-  color: white;
-  background: #F00;
-  border: none;
-}
