--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,1 +1,56 @@
-@import "fonts/crimson";
+@font-face {
+  font-family: Crimson;
+  src: font-url('crimson-roman-webfont.eot');
+  src: font-url('crimson-roman-webfont.eot?#iefix') format('embedded-opentype'),
+       font-url('crimson-roman-webfont.woff') format('woff'),
+       font-url('crimson-roman-webfont.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: Crimson;
+  src: font-url('crimson-bold-webfont.eot');
+  src: font-url('crimson-bold-webfont.eot?#iefix') format('embedded-opentype'),
+       font-url('crimson-bold-webfont.woff') format('woff'),
+       font-url('crimson-bold-webfont.ttf') format('truetype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: Crimson;
+  src: font-url('crimson-italic-webfont.eot');
+  src: font-url('crimson-italic-webfont.eot?#iefix') format('embedded-opentype'),
+       font-url('crimson-italic-webfont.woff') format('woff'),
+       font-url('crimson-italic-webfont.ttf') format('truetype');
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Crimson;
+  src: font-url('crimson-bolditalic-webfont.eot');
+  src: font-url('crimson-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+       font-url('crimson-bolditalic-webfont.woff') format('woff'),
+       font-url('crimson-bolditalic-webfont.ttf') format('truetype');
+  font-weight: bold;
+  font-style: italic;
+}
+
+/*
+@font-face {
+  font-family: Crimson;
+  src: font-url('crimson-semibold-webfont.eot');
+  src: font-url('crimson-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+       font-url('crimson-semibold-webfont.woff') format('woff'),
+       font-url('crimson-semibold-webfont.ttf') format('truetype');
+  font-weight: bolder;
+}
+
+@font-face {
+  font-family: Crimson;
+  src: font-url('crimson-semibolditalic-webfont.eot');
+  src: font-url('crimson-semibolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+       font-url('crimson-semibolditalic-webfont.woff') format('woff'),
+       font-url('crimson-semibolditalic-webfont.ttf') format('truetype');
+  font-weight: bolder;
+  font-style: italic;
+}
+*/
