--- a/src/sass/_book.scss
+++ b/src/sass/_book.scss
@@ -1,17 +1,15 @@
 /**
  * Basic book settings -----------------------------------------------
  */
-
-.book {
-  max-width: 40em;
-  padding: 6.25em .625em;
-  margin: 0 auto;
+body {
+  background: #888;
 }
 
-@media (max-height: 31.25em) {
-  .book {
-    padding-top: 3.125em;
-  }
+.book {
+  background: #FBFBFA;
+  max-width: 40em;
+  padding: $baseline*4em $baseline*2em;
+  margin: 0 auto;
 }
 
 @media (max-width: 64em) {
@@ -20,9 +18,29 @@
   }
 }
 
-@media (max-width: 52em) {
+@media (max-width: 46em) {
+  body {
+    font-size: 15px;
+  }
   .book {
     margin-right: 0;
+    padding: 1em;
+  }
+}
+
+@media (max-width: 30em) {
+  body {
+    font-size: 14px;
+  }
+  .book {
+    padding-left: 3px;
+    padding-right: 3px;
+  }
+}
+
+@media (max-height: 30em) {
+  .book {
+    padding-top: 1em;
   }
 }
 
@@ -32,14 +50,14 @@
   text-align: center;
   font-size: 4em;
   color: #ccc;
-  margin: 1.25em 0 0;
+  margin: $baseline*1em 0;
 }
 
 header,
 section {
-  margin: 0 0 2.5em;
-  padding: 0 0 2.4375em;
-  border-bottom: .0625em solid #ccc;
+  margin: 0 0 $baseline*2em;
+  padding: 0 0 $baseline*2em;
+  border-bottom: 1px solid #ccc;
 }
 
 @media print {
@@ -55,7 +73,7 @@ section {
     page-break-after: auto;
   }
   section section {
-    padding-bottom: 2.5em;
+    padding-bottom: $baseline*2em;
   }
   section section > *:first-child {
     page-break-before: avoid;
@@ -82,16 +100,12 @@ header p {
   text-align: center;
 }
 
-header h2 {
-  margin-bottom: 1.25em;
-}
-
 header h2.author:before {
   content: "by ";
   display: block;
-  font-size: .666em;
+  font-size: 1em / $scale;
   font-style: italic;
-  margin: 0 0 .625em;
+  margin-bottom: #{$baseline / ($scale * $scale) * .5em};
 }
 
 header h2.author:lang(de):before {
@@ -122,7 +136,7 @@ section > p:first-child:first-line {
 }
 
 p.separation {
-  margin-top: 1.25em;
+  margin-top: $baseline*1em;
   text-indent: 0;
 }
 
