--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -1,38 +1,44 @@
 /**
  * Reset -------------------------------------------------------------
  */
-article, aside, dialog, figcaption, figure, footer, header,
-hgroup, menu, nav, section {
+article, aside, details, figcaption, figure, footer, header, hgroup,
+main, nav, section, summary {
   display: block;
+}
+
+[hidden],
+template {
+  display: none;
 }
 
 html {
   overflow-y: scroll;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
-  font: 100%/1.5em Crimson,serif;
+  font: 100%/#{$baseline} Crimson,Georgia,serif;
   color: #222;
-  background: #FDFDFD;
+  background: #FBFBFA;
   margin: 0;
 }
 
 @media print {
   body {
-    font-size: 75%;
-    line-height: 1.25em;
+    font-size: 11pt;
   }
 }
 
 table {
-  border-spacing: 0;
   border-collapse: collapse;
-  margin: 1.25em;
+  border-spacing: 0;
+  margin: $baseline*1em;
 }
 
 caption, td, th {
   text-align: left;
-  padding: 0.375em 1.25em;
+  padding: #{$baseline*1em/4} #{$baseline*1em};
 }
 
 figcaption,
@@ -45,61 +51,57 @@ caption {
 }
 
 thead th, tbody {
-  border-bottom: .0625em solid #ccc;
+  border-bottom: 1px solid #ccc;
 }
 
 table.left_headed {
-  border-left: .0625em solid #ccc;
+  border-left: 1px solid #ccc;
   border-bottom: none;
 }
 
 h1 {
-  font-size:  4.0em;
-  line-height: 1.25;
-  margin: 0 auto .625em;
+  font-size: $scale * $scale * $scale * $scale * 1em;
+  line-height: $baseline / ($scale * $scale * $scale * $scale) * 3;
+  margin: 0 auto #{$baseline / ($scale * $scale * $scale * $scale) * .5em};
   text-align: center;
   font-weight: normal;
 }
 
 h2 {
-  font-size:  3em;
+  font-size: $scale * $scale * $scale * 1em;
   font-weight: normal;
-  line-height: 1.25;
-  margin-bottom: .41666em;
+  line-height: $baseline / ($scale * $scale * $scale) * 2;
+  margin: 0 auto #{$baseline / ($scale * $scale * $scale) * .5em};
 }
 
 h3 {
-  font-size:  2em;
-  line-height: 1.25;
-  margin: .5em 0 .5em;
+  font-size: $scale * $scale * 1em;
+  line-height: $baseline / ($scale * $scale) * 1.5;
+  margin: 0 auto #{$baseline / ($scale * $scale) * .5em};
   font-variant: small-caps;
   text-transform: lowercase;
   font-weight: normal;
   letter-spacing: .033em;
 }
 
-h3:first-child {
-  margin-top: 0;
-}
-
 h4 {
-  font-size:  1.125em;
-  line-height: 1.11;
-  margin-bottom: .5em;
+  font-size: $scale * 1em;
+  line-height: $baseline / $scale * 1.5;
+  margin: 0 auto #{$baseline / $scale * .5em};
   font-style: italic;
   font-weight: normal;
 }
 
 h5 {
   font-size: 1em;
-  line-height: 1.25;
-  margin: 1.875em 0 1.25em;
+  line-height: $baseline;
+  margin: 0 auto .5em;
 }
 
 h6 {
-  text-indent: 1.25em;
+  text-indent: $baseline*1em;
   font-style: italic;
-  margin: 0 0 .625em;
+  margin: 0 auto .5em;
 }
 
 p {
@@ -112,18 +114,22 @@ p {
   hyphens: auto;
 }
 
-@media (max-width: 40em) {
+@media (max-width: 46em) {
   p {
     text-align: left;
   }
 }
 
 p + p {
-  text-indent: 1.25em;
+  text-indent: $baseline*1em;
 }
 
 abbr[title], dfn[title] {
   cursor: help;
+}
+
+blockquote {
+  margin: $baseline*1em;
 }
 
 blockquote:before, blockquote:after {
@@ -157,17 +163,23 @@ strong, b {
   padding: 0 0 0 .1em;
 }
 
+dfn {
+  font-style: italic;
+}
+
 sub, sup {
-  font-size: 0.875em;
+  font-size: 1em/$scale;
   line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sub {
-  vertical-align: sub;
+  bottom: -0.25em;
 }
 
 sup {
-  vertical-align: super;
+  top: -0.5em;
 }
 
 ins {
@@ -178,24 +190,35 @@ del {
   text-decoration: line-through;
 }
 
-code, kbd {
+code, kbd, samp {
   font-family: "DejaVu Sans Mono", monospace;
+  font-size: 1em;
 }
 
+/* our <pre> is mostly for poems and stuff, so inherit font family */
 pre {
   font-family: inherit;
-  font-size: 100%;
+  font-size: 1em;
+  margin: $baseline*1em 0;
+  white-space: pre-wrap;
 }
 
 hr {
-  color: #aaa;
-  height: .0625em;
-  background: #aaa;
   border: none;
-  margin: 1.25em 0 1.1875em;
+  border-top: 1px solid #aaa;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
+  margin: $baseline*1em auto;
+}
+
+mark {
+  background: #ff0;
+  color: #000;
 }
 
 a {
+  background: transparent;
   color: #A00;
   text-decoration: none;
 }
@@ -208,18 +231,23 @@ a:hover,
 a:focus {
   outline: none;
   color: #F00;
-  border-bottom: .0625em solid;
+  border-bottom: 1px solid;
 }
 
 a:active {
-  color: white;
   background: #F00;
   border: none;
+  color: white;
+  outline: none;
+}
+
+img {
+  border: 0;
 }
 
 figure {
   text-align: center;
-  margin: 1.25em auto;
+  margin: $baseline*1em auto;
   max-width: 100%;
 }
 
@@ -230,6 +258,6 @@ figure img {
 }
 
 figcaption {
-  font-size: .875em;
-  line-height: 1.42857;
+  font-size: 1em / $scale;
+  line-height: $baseline * $scale;
 }
