adapt background color

--- a/src/sass/_book.scss
+++ b/src/sass/_book.scss
@@ -2,7 +2,7 @@
  * Basic book settings -----------------------------------------------
  */
 body {
-  background: #bbbbba;
+  background: #bbbaaa;
 }
 
 .book {
