combine common header styles

--- a/src/template.mustache
+++ b/src/template.mustache
@@ -31,7 +31,7 @@
     {{/style}}
   </head>
 <body>
-<article class="book">
+<article class="book{{class}}">
 {{{text}}}</article>
 <script src="static/ebook.js"></script>
 </body>
